<resources>
    <string name="app_name">Movista</string>

    <string name="error_message">
        An error has occurred. Please try again by swipe down to refresh
    </string>

    <string name="title_about">About</string>
    <string name="detail_app">Movista merupakan aplikasi yang menampilkan list film.</string>
    <string name="title_libs">Library &amp; resources</string>
    <string name="retrofit">Retrofit</string>
    <string name="gson">Gson</string>
    <string name="butter_knife">Butter Knife</string>
    <string name="picasso">Picasso</string>
    <string name="coverflow">Android Coverflow</string>
    <string name="expandable_text_view">Expandable TextView</string>
    <string name="yt_api">YouTube Android Player API</string>
    <string name="title_developer">Developer</string>
    <string name="name_developer">Kamaludin Akbar</string>
    <string name="email_developer">kamaludinakbar@hotmail.com</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <string name="content_authority">com.akbar.dev.movieudacity</string>

    <string-array name="category">
        <item>Popular</item>
        <item>Top Rated</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_favorite">Favorite</string>
    <string name="title_activity_man">MainActivity</string>
    <string name="api_warning">Please obtain your API KEY first from themoviedb.org</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="intent_warning">Detail activity must receive a movie parcelable</string>
    <string name="link_poster"></string>
    <string name="link_backdrop"></string>
    <string name="title_movie">movie</string>
    <string name="action_trailer_review">See Trailer and Review</string>
    <string name="message_no_review">There is no reviews for </string>
    <string name="message_no_trailer">There is no trailers for </string>
    <string name="add_favorite_message">Added to favorites</string>
    <string name="remove_favorite_message">Removed from favorites</string>
    <string name="intent_id">id</string>
    <string name="intent_title">title</string>
    <string name="title_activity_favorite">Your favorite movies</string>
    <string name="title_activity_trailer_review">Trailers and Reviews:</string>
    <string name="link_youtube">http://youtube.com/watch?v=</string>
    <string name="message_no_favorite">No favorite items</string>
</resources>
